--- a/app/src/main/res/layout/activity_mountain_details.xml
+++ b/app/src/main/res/layout/activity_mountain_details.xml
@@ -34,6 +34,12 @@
             android:orientation="vertical">
 
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@mipmap/ic_launcher"
+                android:id="@+id/mountainImage" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -57,6 +63,7 @@
                 android:height="48dp"
                 android:padding="8dp"
                 />
+
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
