--- a/app/src/main/res/layout/activity_mountain_details.xml
+++ b/app/src/main/res/layout/activity_mountain_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.brom.activitiesapp.MountainsDetailsActivity"
+    tools:context="com.example.brom.activitiesapp.hio"
     android:orientation="vertical">
 
     <android.support.design.widget.AppBarLayout
@@ -63,7 +63,6 @@
                 android:height="48dp"
                 android:padding="8dp"
                 />
-
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
